# exchange_api

./: README.md  pyproject.toml  requirements.txt
data/: exchange.parquet  output.parquet
src/: daily_fetch.py  main.py
src/modules/: reader.py  visualizer.py  writer.py
