[project]
name = "bewerbung-bundesdruckerei"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autopep8>=2.3.2",
    "flake8>=7.1.2",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pyarrow>=19.0.1",
    "requests>=2.32.3",
]
